<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <aipo.version>8.0.1</aipo.version>
    <tomcat.version>7.0.57</tomcat.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <groupId>com.aimluck.eip</groupId>
  <artifactId>aipo</artifactId>
  <version>8.0.1</version>
  <packaging>pom</packaging>

  <name>Aipo Project</name>

  <description>Groupware Aipo</description>
  <url>http://www.aipo.com</url>
  <inceptionYear>2004</inceptionYear>
  <organization>
    <name>Aimluck,Inc.</name>
    <url>http://www.aimluck.com</url>
  </organization>
  <licenses>
    <license>
      <name>GNU Affero General Public License v3</name>
      <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>nbeppu</id>
      <name>Nobuhiko Beppu</name>
      <url>https://github.com/nbeppu</url>
      <organization>Aimluck,Inc.</organization>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>dercll1020</id>
      <name>Dai Hamada</name>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>rio.carbon</id>
      <name>Tomoharu Ono</name>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>atsushi.shi</id>
      <name>Atsushi Shibata</name>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>yoshiteru.i</id>
      <name>Yoshiteru Iwasaki</name>
      <url>https://github.com/YoshiteruIwasaki</url>
      <organization>Aimluck,Inc.</organization>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>ges.jonieet</id>
      <name>Yuji Koshikawa</name>
      <url>https://github.com/alkoshikawa</url>
      <organization>Aimluck,Inc.</organization>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>yusuke.takase.al</id>
      <name>Yusuke Takase</name>
      <url>https://github.com/altakase</url>
      <organization>Aimluck,Inc.</organization>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>keisuke.takada</id>
      <name>Keisuke Takada</name>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>nagatanoadoless</id>
      <name>Takashi Nagata</name>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>nonstop-girl</id>
      <url>https://github.com/nonstop-girl</url>
      <organization>Aimluck,Inc.</organization>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>haradaaa</id>
      <url>https://github.com/haradaaa</url>
      <organization>Aimluck,Inc.</organization>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>y-ozaki</id>
      <url>https://github.com/y-ozaki</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>tomoumi-n</id>
      <url>https://github.com/tomoumi-n</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>ktaguro</id>
      <url>https://github.com/ktaguro</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>shin-taro</id>
      <url>https://github.com/shin-taro</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>evistream</id>
      <url>https://github.com/evistream</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>reotogashi</id>
      <url>https://github.com/reotogashi</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>ryosukeyamamoto</id>
      <url>https://github.com/ryosukeyamamoto</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>sho0110</id>
      <url>https://github.com/sho0110</url>
      <timezone>+9</timezone>
    </developer>
    <developer>
      <id>kymr16</id>
      <url>https://github.com/kymr16</url>
      <timezone>+9</timezone>
    </developer>
  </developers>
  <contributors>
  </contributors>

  <scm>
    <url>https://github.com/aipocom/aipo</url>
    <connection>scm:git:git://github.com/aipocom/aipo.git</connection>
    <developerConnection>scm:git:git@github.com:aipocom/aipo.git</developerConnection>
  </scm>
  <repositories>
    <repository>
      <id>maven.seasar.org</id>
      <name>The Seasar Foundation Maven2 Repository</name>
      <url>http://maven.seasar.org/maven2</url>
    </repository>
    <repository>
      <id>aipo.googlecode.com</id>
      <name>The Aipo Project Maven2 Repository</name>
      <url>http://aipo.googlecode.com/svn/repository</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <id>mc-release</id>
      <name>Local Maven repository of releases</name>
      <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
    <pluginRepository>
      <id>mc-snapshot</id>
      <name>Local Maven repository of snapshots</name>
      <url>http://mc-repo.googlecode.com/svn/maven2/snapshots</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>

  <modules>
    <module>jetspeed</module>
    <module>oms</module>
    <module>core</module>
    <module>lib</module>
    <module>portlets</module>
    <module>war</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>findbugs-maven-plugin</artifactId>
          <version>3.0.0</version>
        <configuration>
          <onlyAnalyze>com.aimluck.-</onlyAnalyze>
          <effort>Max</effort>
          <findbugsXmlOutput>true</findbugsXmlOutput>
          <xmlOutput>true</xmlOutput>
          <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
        </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <failOnError>true</failOnError>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>2.8</version>
        <configuration>
          <header>header.txt</header>
          <mapping>
            <xreg>XML_STYLE</xreg>
            <psml>XML_STYLE</psml>
          </mapping>
          <includes>
            <include>**/src/**/*.java</include>
            <include>**/src/**/*.vm</include>
            <include>**/src/**/*.html</include>
            <include>**/src/**/*.xml</include>
            <include>**/src/**/*.xreg</include>
            <include>**/src/**/*.psml</include>
            <include>**/src/**/*.js</include>
            <include>**/src/**/*.css</include>
            <include>**/src/**/*.jsp</include>
            <include>**/src/**/*.xsl</include>
            <include>**/src/**/*.properties</include>
            <include>**/*.sql</include>
          </includes>
          <excludes>
            <exclude>**/src/main/java/org/apache/**/*.*</exclude>
            <exclude>**/src/main/java/info/bliki/**/*.*</exclude>
            <exclude>**/src/main/java/com/aimluck/eip/cayenne/om/**/auto/*.*</exclude>
            <exclude>**/src/main/resources/org/apache/**/*.*</exclude>
            <exclude>**/src/test/java/org/apache/**/*.*</exclude>
            <exclude>**/src/test/resources/org/apache/**/*.*</exclude>
            <exclude>**/src/main/webapp/javascript/dijit/**/*.*</exclude>
            <exclude>**/src/main/webapp/javascript/dojo/**/*.*</exclude>
            <exclude>**/src/main/webapp/javascript/dojox/**/*.*</exclude>
            <exclude>**/src/main/webapp/javascript/aipo.js</exclude>
            <exclude>**/*.min.js</exclude>
            <exclude>**/*.ycomp.js</exclude>
            <exclude>**/*-all.js</exclude>
            <exclude>**/*.min.css</exclude>
          </excludes>
          <encoding>UTF-8</encoding>
          <strictCheck>true</strictCheck>
          <skipExistingHeaders>false</skipExistingHeaders>
          <properties>
            <year>2015</year>
          </properties>
          <headerDefinitions>
            <headerDefinition>header-definition.xml</headerDefinition>
          </headerDefinitions>
        </configuration>
      </plugin>
      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.6</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jsp-api</artifactId>
      <version>2.0</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>ant</groupId>
      <artifactId>ant</artifactId>
      <version>1.5</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>3.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat</groupId>
      <artifactId>tomcat-catalina</artifactId>
      <version>7.0.57</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <onlyAnalyze>com.aimluck.-</onlyAnalyze>
          <effort>Max</effort>
          <findbugsXmlOutput>true</findbugsXmlOutput>
          <xmlOutput>true</xmlOutput>
          <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <targetJdk>1.8</targetJdk>
          <excludeRoots>
              <excludeRoot>jetspeed</excludeRoot>
          </excludeRoots>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>pmd</report>
              <report>cpd</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.5</version>
      </plugin>
    </plugins>
  </reporting>
</project>
